--- a/pom.xml
+++ b/pom.xml
@@ -28,14 +28,14 @@
     </parent>
     <groupId>org.exoplatform.addons.exo-jdbc-driver-oracle</groupId>
     <artifactId>exo-jdbc-driver-oracle</artifactId>
-    <version>1.1.x-SNAPSHOT</version>
+    <version>1.1.0</version>
     <packaging>pom</packaging>
     <name>eXo Platform Oracle driver</name>
     <description>eXo Platform Oracle driver</description>
     <scm>
         <connection>scm:git:git://github.com/exo-addons/exo-jdbc-driver-oracle.git</connection>
         <developerConnection>scm:git:git@github.com:exo-addons/exo-jdbc-driver-oracle.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>1.1.0</tag>
         <url>https://github.com/exo-addons/exo-jdbc-driver-oracle</url>
     </scm>
     <properties>
